# youtube-live-manager

./: .gitignore  index.html  package-lock.json  package.json  tailwind.config.js
.github/workflows/: build.yml
src/: App.tsx  index.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs
src-tauri/src/db/: database.rs
src-tauri/src/stream/: manager.rs  mod.rs  process.rs  scheduler.rs  types.rs
src/components/: AddStreamDialog.tsx  Header.tsx  StreamList.tsx
src/components/ui/: badge.tsx  button.tsx  card.tsx  dialog.tsx  input.tsx  label.tsx  select.tsx
